--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/style.css">
     <title>Tixly</title>
 </head>
@@ -17,13 +18,15 @@
         <div class="logo">
             <img src="assets\image\TixlyLogo.svg" alt="logo" class="logo">
         </div>
+
         <div class="navbar">
-            <a href="#" style="text-decoration:underline;">HOME</a>
+            <a href="#" style="text-decoration  :underline;">HOME</a>
             <a href="#">SHOP</a>
             <a href="#">ABOUT</a>
             <a href="#">INSIGHT</a>
             <a href="#">CONTACT</a>
-            <a href="#"><i class="fa-solid fa-bag-shopping"></i>SHOPPING-BAG(0)</a>
+            <i class="fa-solid fa-bag-shopping my-bag"></i>
+            <a href="#">SHOPPING-BAG(0)</a>
         </div>
     </div>
 
@@ -44,17 +47,17 @@
             <p>From baby accessories to children's clothing, there's something for everyone in our store. </p>
         </div>
 
-        <div class="photo-items container">
-            <div class="items col-4">
+        <div class="photo-items ">
+            <div class="items ">
                 <img src="assets\image\tixly1.1.avif" alt="">
                 <button class="btns">ACCESORIES</button>
             </div>
-            <div class="items col-4">
+            <div class="items ">
                 <img src="assets\image\tixly1.2.avif" alt="">
                 <button class="btns">CLOTHES</button>
 
             </div>
-            <div class="items col-4">
+            <div class="items ">
                 <img src="assets\image\tixly1.3.avif" alt="">
                 <button class="btns">TOYS</button>
 
@@ -73,7 +76,7 @@
                 we are about making the world a better place.</p>
             <button>DISCOVER</button>
         </div>
-        <div>
+        <div class="discover-image">
             <img src="assets\image\tixly1.4.webp" alt="">
         </div>
     </section>
@@ -83,20 +86,58 @@
             <span>An inside look to our inspirational gallery...</span>
         </div>
 
-        <div class="photo-items container">
-            <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
-                alt="">
-            <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
-                alt="">
-            <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
-                alt="">
+        <div class="gallery-photo-items ">
+            <div class="items">
+                <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
+                    alt="">
+            </div>
+            <div class="items">
+                <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
+                    alt="">
+            </div>
+            <div class="items">
+                <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
+                    alt="">
+            </div>
+            <div class="items">
+                <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
+                    alt="">
+            </div>
 
-            <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=328,h=419,fit=crop/tixlyvnpr7/nynne-schroder-unsplash-dOqw03VXpgcWNz19.jpg"
-                alt="">
-
-            <button>DISCOVER MORE</button>
         </div>
+        <button class="btndiscover">DISCOVER MORE</button>
     </section>
+
+
+
+    <footer class="footer">
+        <div class="footer-display">
+            <div class="">
+                <h2>Address</h2>
+                <p>3721 Single Street
+                    Quincy, MA 02169</p>
+            </div>
+            <div>
+                <h2>Contacts</h2>
+                <p>123 456 7890
+                    info@tixly.com</p>
+            </div>
+            <div>
+                <h2>FAQ</h2>
+                <p>Shipping & Return policy</p>
+            </div>
+            <div>
+                <h2 id="subscribe">Subscribe to our newsletter</h2>
+                <input class="subscribeinput" type="text" placeholder="Your email adress" required>
+                <button class="subscribebtn" style="background-color: white;">Submit</button>
+            </div>
+        </div>
+        <div class="icons">
+                <a href=""><i class="fa-brands fa-skype "></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
